MFH: - Fixed bug #46249 (pdo_pgsql always fill in NULL for empty BLOB) - Fixed bug #46274 (pdo_pgsql - Segfault when using PDO::ATTR_STRINGIFY_FETCHES and blob)